2011-07-07  Kan-Ru Chen  <kanru@kanru.info>

	* nnir.el (nnir-read-server-parm): Use default value from global
	variable.  Without this the default search engine parameters aren't
	used at all.

2011-07-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-unique-id): Don't use the undocumented return
	value from (random t) (bug#9118).

2011-07-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-auto-save-directory): If the ~/Mail directory
	doesn't exist, use ~ as the auto-save directory (bug#4432).

	* gnus-group.el (gnus-group-read-ephemeral-group): Start Gnus if it
	hasn't already been started.

2011-07-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (debbugs-gnu): Renamed from debbugs-emacs.

	* message.el (message-reply): Work around mysterious bug where
	`message-mode' seems to overwrite the locally bound `subject' variable.

2011-07-14  Andrew Cohen  <cohen@andy.bu.edu>

	* nnimap.el (nnimap-request-thread): Ensure search is performed in
	correct group.

	* gnus-int.el (gnus-request-thread): Add group argument.

	* gnus-sum.el (gnus-summary-refer-thread): Use it.

2011-07-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dgnushack.el (debbugs-gnu-summary-mode): Update compat names, too.

	* gnus-group.el (gnus-read-ephemeral-emacs-bug-group): `debbugs-*'
	renamed to `debbugs-gnu-*'.

2011-07-08  Daiki Ueno  <ueno@unixuser.org>

	* plstore.el: Revert the editing feature since it is not urgent.
	(plstore-mode, plstore-mode-toggle-display, plstore-mode-original)
	(plstore-mode-decoded): Remove.

2011-07-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-bug): Don't insert user variables.  It usually
	isn't very interesting any more, and it leaks potentially secret data.
	(gnus-debug): Removed.

	* gnus-art.el (gnus-ignored-headers): Removed obsolete and non-working
	use of :custom-show.

2011-07-07  Daiki Ueno  <ueno@unixuser.org>

	* plstore.el: Add documentation.